# ChatDB

./: README.md  Welcome_Page  chainlit.md  main.py  mrkl.py  permissions.yaml  pyproject.toml  requirements.txt  roles.yaml  scratchpad.py
.chainlit/: config.toml
ChatDB-main/: chainlit.md  mrkl.py  permissions.yaml  roles.yaml
ChatDB-main-EN/: mrkl.py  roles.yaml
ChatDB-main-EN/chatbot/: human_input.py  memory.py  neo4j_tool.py
ChatDB-main-FR/chatbot/: prompts.py
ChatDB-main/ChatDB-main-EN/: Welcome_Page  chainlit.md  mrkl.py  permissions.yaml  pyproject.toml
ChatDB-main/ChatDB-main-EN/chatbot/: prompts.py
ChatDB-main/ChatDB-main-FR/: Welcome_Page  chainlit.md  mrkl.py  requirements.txt  users.yaml
ChatDB-main/chatbot/: prompts.py
chainlit/: mrkl.py
chatbot/: chart_tool.py  human_input.py  memory.py  neo4j_tool.py  prompts.py
