[project]
name = "chatdb"
version = "0.1.15"
authors = [{ name = "Raphael Michel", email = "raphael.michel@cetic.be" }, { name = "Sarah Pinon", email = "sarah.pinon@unamur.be" }]
description = "A demonstration of a BI chatbot"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'chainlit',
  'openai',
  'langchain',

]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/", "tests/"]

